--- a/metallb-config.yaml
+++ b/metallb-config.yaml
@@ -6,3 +6,9 @@ metadata:
 spec:
   addresses:
   - 192.168.0.221 - 192.168.0.229
+---
+apiVersion: metallb.io/v1beta1
+kind: L2Advertisement
+metadata:
+  name: example
+  namespace: metallb-system
